--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
                     </a>
                 </nav>
-                <a href="" class="book-online">
+                <a href="#contact" class="book-online">
                     Book Online
                 </a>
             </div>
@@ -828,7 +828,7 @@
                     Copeland Contracting provides service to Fort Wayne and surrounding areas. Looking for a professional plumbing service? We are here for every day or <span class="text-primary">emergency plumbing needs.</span>
                 </p>
             </div>
-            <section class="bg-white flex flex-col justify-center border-[1px] mt-16 border-primary">
+            <section id="contact" class="bg-white flex flex-col justify-center border-[1px] mt-16 border-primary">
                 <div class="p-10 flex flex-col gap-5 justify-center">
                   <h2 class=" heading text-center text-primary pb-5 text-6xl">Service Request Form</h2>
                   <div class="text-center">
@@ -1075,7 +1075,7 @@
               
                     <!-- Submit Button -->
                     <div class="w-full text-center mt-10 pb-10">
-                      <button type="submit" class="py-3 px-8 bg-primary rounded-xl border-2 text-black font-semibold hover:scale-95 transition-all duration-200">
+                      <button type="submit" class="py-3 px-8 bg-primary rounded-xl border-2 text-black font-semibold hover:scale-95 transition-all duration-200 text-white">
                         Submit
                       </button>
                     </div>
