--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
             </div>
             <!-- desktop navbar -->
         <nav class="desktop-menu hidden lg:flex gap-10 items-center">
-            <a class="hover:scale-[1.1] duration-200 ease text-xl font-bold" href="#">Meet The Team </a>
-            <a class="hover:scale-[1.1] duration-200 ease text-xl font-bold" href="#">About Us</a>
-            <a class="hover:scale-[1.1] duration-200 ease text-xl font-bold" href="#">Gallery</a>
-            <a href="#contact" class="book-online hover:text-white">BOOK ONLINE</a>
+            <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">Meet The Team </a>
+            <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">About Us</a>
+            <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">Gallery</a>
+            <a href="#contact" class="hover:scale-[1.05] book-online hover:text-white">BOOK ONLINE</a>
         </nav>
 
         <button id="hamburger" class="lg:hidden flex flex-col gap-1.5 relative z-[90]">
