--- a/index.html
+++ b/index.html
@@ -33,21 +33,14 @@
 <body>
     <header class="">
         <div class="bg-primary flex items-center justify-end px-[5%] lg:px-20 py-2 gap-3">
-            <a class="bg-black rounded-md ">
+            <a target="_blank" href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" class="bg-black rounded-md ">
                 <img src="./images/Facebook-transparent.png" width="40" alt="">
             </a>
-            <a class="bg-black  rounded-md flex items-center justify-center">
+            <a target="_blank"
+            href="https://www.google.com/maps/place/Copeland+Contracting,+Inc./@46.423669,-129.9427085,3z/data=!4m16!1m9!3m8!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!2sCopeland+Contracting,+Inc.!8m2!3d46.423669!4d-129.9427086!9m1!1b1!16s%2Fg%2F11hy9nqr2l!3m5!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!8m2!3d46.423669!4d-129.9427086!16s%2Fg%2F11hy9nqr2l?entry=ttu&g_ep=EgoyMDI0MDkyMi4wIKXMDSoASAFQAw%3D%3D" class="bg-black rounded-md flex items-center justify-center">
                 <img src="./images/Google-transparent.png" width="40" alt="">
             </a>
-            <!-- <a class="bg-black  rounded-md flex items-center justify-center">
-                <img src="./images/Instagram-transparent.png" width="40" alt="">
-            </a>
-            <a class="bg-black  rounded-md flex items-center justify-center">
-                <img src="./images/LinkedIn-transparent.png" width="40" alt="">
-            </a>
-            <a class="bg-black  rounded-md flex items-center justify-center">
-                <img src="./images/Twitter-transparent.png" width="40" alt="">
-            </a> -->
+           
         </div>
         <div class="bg-black py-6 flex items-center justify-between px-[5%]">
             <div>
@@ -81,7 +74,7 @@
     <main>
 
         <section class="hero h-[80vh]">
-
+            <div class="hero-overlay"></div>
         </section>
 
         <section class="bg-black flex flex-col md:flex-row items-center justify-center lg:gap-48 py-10">
@@ -116,11 +109,11 @@
                 </p>
                 </p>
             </div>
-            <div class="flex flex-col md:flex-row md:flex-wrap gap-10 lg:gap-0 lg:flex-nowrap justify-between px-[5%]">
-                <img src="./images/slide-01.png" alt="">
-                <img src="./images/slide-02.png" alt="">
-                <img src="./images/slide-03.png" alt="">
-                <img src="./images/slide-04.png" alt="">
+            <div class="second grid grid-cols-1 md:grid-cols-2  lg:grid-cols-4 gap-10 justify-between px-[5%]">
+                <img src="./images/second-1.jpeg"  alt="">
+                <img src="./images/second-2.jpeg" alt="">
+                <img src="./images/second-3.jpeg" alt="">
+                <img src="./images/second-4.jpeg" alt="">
             </div>
         </section>
 
@@ -1156,7 +1149,7 @@
                     </div>
                     <div
                         class="bg- flex items-center justify-center mt-5 lg:mt-0 lg:justify-end px-[5%] lg:px-20 py-2 gap-3">
-                        <a href="" target="_blank" class="bg-black rounded-md ">
+                        <a href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" target="_blank" class="bg-black rounded-md ">
                             <img src="./images/Facebook-transparent.png" width="40" alt="">
                         </a>
                         <a target="_blank"
@@ -1170,7 +1163,8 @@
                 <hr class="h-[1px] border-t-zinc-300 w-full" />
                 <div class="text-center flex flex-col gap-3">
                     <p class="text-white hover:text-primary duration-200">License: PC# PC89000128</p>
-                    <p class="text-white hover:text-primary duration-200">We are Black Owned and Operated</p>
+                    <p class="text-white hover:text-primary duration-200">We are Locally Owned and Operated.
+                    </p>
                 </div>
                 <div class="flex-col-reverse flex sm:flex-row justify-between w-full gap-5 pb-10">
                     <p class="p text-center sm:text-start text-white ">© 2024 Copeland Contracting. All Rights Reserved
