--- a/index.html
+++ b/index.html
@@ -75,6 +75,15 @@
 
         <section class="hero h-[80vh]">
             <div class="hero-overlay"></div>
+            <div class="hero-content relative z-10 h-full flex flex-col justify-center items-start pl-[5%]">
+                <h1 class="heading text-white text-7xl lg:text-8xl">
+                    Copeland Contracting <br> in Fort Wayne
+                </h1>
+                <p class="text-white">
+                    Excellent Service / Always on-time / Easy Booking
+                </p>
+                <a href="#contact" class="hover:scale-[1.05] book-online mt-6">Get a Qoute</a>
+            </div>
         </section>
 
         <section class="bg-black flex flex-col md:flex-row items-center justify-center lg:gap-48 py-10">
