--- a/index.html
+++ b/index.html
@@ -131,29 +131,7 @@
                 Plumbing in Fort Wayne
             </h2>
             <div class="card-container mt-10 grid grid-cols-1 lg:grid-cols-2 gap-20">
-
-
-                <div class="card shadow-md">
-                    <div class="img-container">
-                        <img src="./images/drainage-IMG_5285.jpg" alt="" class="card-image">
-
-                    </div>
-                    <div class="card-content">
-                        <h3 class="heading card-title">
-                            Drainage
-                        </h3>
-                        <p class="card-p">
-                            Have drainage issues? We've got you covered! Copeland Contracting is your solution for
-                            drainage system repair and maintenance. We address everything from clogged drains to sewer
-                            backups, drain cleaning services, and drainage system installations. Our team is committed
-                            to keeping your drainage systems functioning smoothly. For comprehensive drainage system
-                            repair and service in Fort Wayne, rely on our experienced Fort Wayne plumbers.
-                        </p>
-                        <a class="card-btn mt-[60px] lg:mt-[40px]">
-                            LEARN MORE
-                        </a>
-                    </div>
-                </div>
+                
                 <div class="card shadow-md">
                     <div class="img-container">
                         <img src="./images/renovation-afba2642-2224-4fb5-9571-d85519651400.jpg" alt=""
@@ -171,6 +149,28 @@
                             Wayne, we ensure every job is completed to the highest standards.
                         </p>
                         <a class="card-btn mt-[40px]">
+                            LEARN MORE
+                        </a>
+                    </div>
+                </div>
+
+                <div class="card shadow-md"></div>
+                    <div class="img-container">
+                        <img src="./images/drainage-IMG_5285.jpg" alt="" class="card-image">
+
+                    </div>
+                    <div class="card-content">
+                        <h3 class="heading card-title">
+                            Drainage
+                        </h3>
+                        <p class="card-p">
+                            Have drainage issues? We've got you covered! Copeland Contracting is your solution for
+                            drainage system repair and maintenance. We address everything from clogged drains to sewer
+                            backups, drain cleaning services, and drainage system installations. Our team is committed
+                            to keeping your drainage systems functioning smoothly. For comprehensive drainage system
+                            repair and service in Fort Wayne, rely on our experienced Fort Wayne plumbers.
+                        </p>
+                        <a class="card-btn mt-[60px] lg:mt-[40px]">
                             LEARN MORE
                         </a>
                     </div>
