--- a/index.html
+++ b/index.html
@@ -47,11 +47,21 @@
                 <img src="./images/logo.png" width="100" alt="">
             </div>
             <!-- desktop navbar -->
-            <nav class="desktop-menu hidden lg:flex gap-10 items-center">
+            <nav class="desktop-menu hidden lg:flex gap-5 items-center">
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">Meet The Team </a>
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">About Us</a>
-                <a class="hover:scale-[1.05] duration-200 ease text-base" href="#">Gallery</a>
-                <a href="#contact" class="hover:scale-[1.05] book-online hover:text-white">BOOK ONLINE</a>
+                <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="#">Gallery</a>
+                <a href="tel:+260-744-1944" class="card-btn gap-2 flex items-center">
+                    <div class="w-[25px]">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
+                            style="enable-background:new 0 0 28.314 28.323" xml:space="preserve">
+                            <path
+                                d="m27.728 20.384-4.242-4.242a1.982 1.982 0 0 0-1.413-.586h-.002c-.534 0-1.036.209-1.413.586L17.83 18.97l-8.485-8.485 2.828-2.828c.78-.78.78-2.05-.001-2.83L7.929.585A1.986 1.986 0 0 0 6.516 0h-.001C5.98 0 5.478.209 5.101.587L.858 4.83C.729 4.958-.389 6.168.142 8.827c.626 3.129 3.246 7.019 7.787 11.56 6.499 6.499 10.598 7.937 12.953 7.937 1.63 0 2.426-.689 2.604-.867l4.242-4.242c.378-.378.587-.881.586-1.416 0-.534-.208-1.037-.586-1.415zm-5.656 5.658c-.028.028-3.409 2.249-12.729-7.07C-.178 9.452 2.276 6.243 2.272 6.244L6.515 2l4.243 4.244-3.535 3.535a.999.999 0 0 0 0 1.414l9.899 9.899a.999.999 0 0 0 1.414 0l3.535-3.536 4.243 4.244-4.242 4.242z" />
+                        </svg>
+                    </div>
+                    260-744-1944
+                </a>
+                <a href="#contact" class="book-online hover:text-white">BOOK ONLINE</a>
             </nav>
 
             <button id="hamburger" class="lg:hidden flex flex-col gap-1.5 relative z-[90]">
@@ -82,7 +92,7 @@
                 <p class="text-white">
                     Excellent Service / Always on-time / Easy Booking
                 </p>
-                <a href="#contact" class="hover:scale-[1.05] book-online mt-6">Get a Qoute</a>
+                <a href="#contact" class="hover:scale-[1.05] book-online mt-6">Get a Quote</a>
             </div>
         </section>
 
@@ -109,7 +119,7 @@
                     Copeland Contracting is your go-to plumbing company in Fort Wayne, IN. Our skilled professionals
                     tackle everything from minor leaks to major installations, ensuring your plumbing system operates
                     flawlessly at all times. We pride ourselves on prompt, courteous service and unmatched expertise.
-                    Don’t let plumbing issues disrupt your day—trust Impetus to handle your plumbing systems. Ready to
+                    Don’t let plumbing issues disrupt your day—trust Copeland Contracting to handle your plumbing systems. Ready to
                     experience top-notch service? Contact us for some of the best plumbing Fort Wayne has to offer!
                     <br> <br>
                 <p class="text-center">
@@ -154,7 +164,7 @@
                     </div>
                 </div>
 
-                <div class="card shadow-md"></div>
+                <div class="card shadow-md">
                     <div class="img-container">
                         <img src="./images/drainage-IMG_5285.jpg" alt="" class="card-image">
 
@@ -843,7 +853,7 @@
                 </p>
             </div>
             <div class="lg:w-1/2 mt-5 lg:mt-0">
-                <img src="./images/plumber-7424D03A-8ED3-463A-BC7D-F3CAC61D1BB4.jpg"
+                <img src="./images/why-choose-img.jpeg"
                     class="h-[400px] object-cover w-full" alt="">
             </div>
         </section>
