--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,6 @@
                                     <option value="Returning Customer">Returning Customer</option>
                                     <option value="Internet Search">Internet Search</option>
                                     <option value="Referral">Referral</option>
-                                    <option value="Radio">Radio</option>
                                     <option value="Facebook">Facebook</option>
                                     <option value="Other">Other</option>
                                 </select>
@@ -1181,7 +1180,7 @@
                 </div>
                 <hr class="h-[1px] border-t-zinc-300 w-full" />
                 <div class="text-center flex flex-col gap-3">
-                    <p class="text-white hover:text-primary duration-200">License: PC# PC89000128</p>
+                    <p class="text-white hover:text-primary duration-200">License: PC#89000128</p>
                     <p class="text-white hover:text-primary duration-200">We are Locally Owned and Operated.
                     </p>
                 </div>
