--- a/index.html
+++ b/index.html
@@ -761,16 +761,10 @@
                 </div>
                 <div class="card2 bg-white shadow-lg p-4">
                     <h3 class="heading uppercase text-3xl opacity-80">
-                        Hot Water Heaters
+                        Water Heater
                     </h3>
                     <p class="mt-2">
-                        Never face a cold shower again; we service all types of water heaters, including tankless,
-                        electric, and gas models. We're proud to be Navien Tankless Service Specialists and work with
-                        all kinds of tankless models. Common issues we address include inconsistent water temperatures,
-                        strange noises, leaks, and complete system failures. With a quick service call, one of our
-                        skilled technicians can quickly diagnose the problem and provide hot water heater repairs to
-                        restore hot water tanks and supply. Whether it's a minor fix or a major repair, we’re committed
-                        to delivering the best service and ensuring your home has a steady supply of hot water.
+                        Never face a cold shower again; we service all types of water heaters. Common issues we address include inconsistent water temperatures, strange noises, leaks, and complete system failures. With a quick service call, one of our skilled technicians can quickly diagnose the problem and provide hot water heater repairs to restore water tanks and supply. Whether it's a minor fix or a major repair, we’re committed to delivering the best service and ensuring your home has a steady supply of hot water.
                     </p>
 
                 </div>
@@ -854,7 +848,7 @@
             </div>
             <div class="lg:w-1/2 mt-5 lg:mt-0">
                 <img src="./images/why-choose-img.jpeg"
-                    class="h-[400px] object-cover w-full" alt="">
+                    class="h-[400px] object-contain lg:object-cover w-full" alt="">
             </div>
         </section>
 
@@ -897,7 +891,7 @@
                     <h2 class=" heading text-center text-primary pb-5 text-6xl">Service Request Form</h2>
                     <div class="text-center">
                         <h3 class="opacity-80 pb-3 text-2xl">Office Hours</h3>
-                        <h4 class="text-xl">Monday-Friday : 8:00am-4:00pm</h4>
+                        <h4 class="text-xl">Monday-Friday : 8:00am-5:00pm</h4>
                         <h4 class="text-xl">Closed on Saturday and Sunday</h4>
                     </div>
                     <p class="text-center">
@@ -1128,33 +1122,27 @@
 
         </section>
 
-        <footer class="px-[10%] bg-black">
+        <footer class="px-[5%] bg-black">
             <div class="flex flex-col gap-16 pt-[3rem] items-center justify-between">
-                <div class="flex w-full flex-col lg:flex-row justify-between">
+                <div class="flex w-full flex-col lg:flex-row gap-10 justify-between">
                     <a href="/" class="img-container flex items-center justify-center" onclick="scrollToTop()">
                         <img src="./images/logo.png" alt="logo" width="250" height="250" />
                     </a>
                     <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 items-center justify-center">
                         <ul
                             class="p flex flex-col justify-center items-center gap-6 sm:justify-start sm:items-start text-center">
-                            <li class="flex gap-2 items-center">
-                                <svg class="w-5 h-5">
-                                    <!-- Include your FaLocationDot SVG here -->
-                                </svg>
-                                <a href="https://maps.app.goo.gl/NGC6gzFgLkK41BhK7" target="_blank">
-                                    Fort Wayne, Indiana
+                            <li class="flex gap-2 items-start">
+                                <svg class="mt-1" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 384 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>
+                                <a href="https://maps.app.goo.gl/NGC6gzFgLkK41BhK7" class="text-start" target="_blank">
+                                    3105 Oxford Street, Fort Wayne, Indiana 46806
                                 </a>
                             </li>
                             <li class="flex items-center gap-2">
-                                <svg class="w-5 h-5">
-                                    <!-- Include your FaPhone SVG here -->
-                                </svg>
+                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
                                 <a href="tel:+(260) 744-1944" target="_blank">(260) 744-1944</a>
                             </li>
                             <li class="flex items-center gap-2">
-                                <svg class="w-5 h-5">
-                                    <!-- Include your MdEmail SVG here -->
-                                </svg>
+                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"></path></svg>
                                 <a href="mailto:copelandcontracting@comcast.net"
                                     target="_blank">copelandcontracting@comcast.net</a>
                             </li>
@@ -1195,9 +1183,6 @@
             </div>
 
         </footer>
-
-
-
     </main>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
