--- a/index.html
+++ b/index.html
@@ -784,6 +784,35 @@
             </div>
         </section>
 
+        <section class="lg:pr-[5%]  py-10 service-areas flex-col lg:flex-row items-center gap-10">
+            <div class="overflow-hidden">
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10TPNh8rEjj7U-ufTljkokci_3mQ2rs8&ehbc=2E312F&noprof=1" width="1200" height="480"></iframe>
+            </div>
+            <div class="px-[5%] lg:px-0 mt-10 lg:mt-0">
+                <h3 class="heading text-5xl opacity-80 uppercase">Our Service Areas</h3>
+                <p>Our plumbing services extend across a diverse range of areas ensuring that residents throughout the region have access to our expertise and support.
+                </p>
+                <ul class="service-list mt-5">
+                    <li>
+                        <a target="_blank" href="https://www.google.com/maps/place/Fort+Wayne,+IN,+USA/@41.082613,-85.1509,11z/data=!3m1!4b1!4m6!3m5!1s0x8815e4ddff22814b:0x80077b147642f793!8m2!3d41.079273!4d-85.1393513!16zL20vMDJfbjc?entry=ttu&g_ep=EgoyMDI0MDkyNS4wIKXMDSoASAFQAw%3D%3D">Fort Wayne</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.google.com/maps?q=New+Haven,+IN,+USA&ftid=0x8815f973db4134a1:0x9aa6c22659584bca">New Haven</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.google.com/maps?q=Warsaw,+IN,+USA&ftid=0x88169c2c429cbf67:0xb591e659bc67c800">Warsaw</a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://www.google.com/maps?q=Fishers,+IN,+USA&ftid=0x8814b377e061fed9:0x5c70915098c7503b">Fishers</a>
+                    </li>
+                    <li class="last-li">
+                        <a target="_blank" href="https://www.google.com/maps?q=Indianapolis,+IN,+USA&ftid=0x886b50ffa7796a03:0xd68e9df640b9ea7c">Indianapolis
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
         <section class="cta-btns p-[5%] md:p-16">
             <div
                 class="bg-[#f5f5f5] rounded-md flex flex-col lg:flex-row items-center justify-between px-[5%] md:px-[20%] py-20">
