--- a/index.html
+++ b/index.html
@@ -784,9 +784,9 @@
             </div>
         </section>
 
-        <section class="lg:pr-[5%]  py-10 service-areas flex-col lg:flex-row items-center gap-10">
+        <section class="lg:pr-[5%]  py-10 service-areas flex flex-col lg:flex-row items-center gap-10">
             <div class="overflow-hidden">
-                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10TPNh8rEjj7U-ufTljkokci_3mQ2rs8&ehbc=2E312F&noprof=1" width="1200" height="480"></iframe>
+                <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10TPNh8rEjj7U-ufTljkokci_3mQ2rs8&ehbc=2E312F&noprof=1" class="w-[450px] md:w-[800px] lg:w-[1200px]" height="480"></iframe>
             </div>
             <div class="px-[5%] lg:px-0 mt-10 lg:mt-0">
                 <h3 class="heading text-5xl opacity-80 uppercase">Our Service Areas</h3>
