--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                             to keeping your drainage systems functioning smoothly. For comprehensive drainage system
                             repair and service in Fort Wayne, rely on our experienced Fort Wayne plumbers.
                         </p>
-                        <a class="card-btn mt-[60px] lg:mt-[40px]">
+                        <a href="./drainage.html" class="card-btn mt-[60px] lg:mt-[40px]">
                             LEARN MORE
                         </a>
                     </div>
@@ -1151,68 +1151,68 @@
 
         </section>
 
-        <footer class="px-[5%] bg-black">
-            <div class="flex flex-col gap-16 pt-[3rem] items-center justify-between">
-                <div class="flex w-full flex-col lg:flex-row gap-10 justify-between">
-                    <a href="/" class="img-container flex items-center justify-center" onclick="scrollToTop()">
-                        <img src="./images/logo.png" alt="logo" width="250" height="250" />
+    </main>
+    <footer class="px-[5%] bg-black">
+        <div class="flex flex-col gap-16 pt-[3rem] items-center justify-between">
+            <div class="flex w-full flex-col lg:flex-row gap-10 justify-between">
+                <a href="/" class="img-container flex items-center justify-center" onclick="scrollToTop()">
+                    <img src="./images/logo.png" alt="logo" width="250" height="250" />
+                </a>
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 items-center justify-center">
+                    <ul
+                        class="p flex flex-col justify-center items-center gap-6 sm:justify-start sm:items-start text-center">
+                        <li class="flex gap-2 items-start">
+                            <svg class="mt-1" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 384 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>
+                            <a href="https://maps.app.goo.gl/NGC6gzFgLkK41BhK7" class="text-start" target="_blank">
+                                3105 Oxford Street, Fort Wayne, Indiana 46806
+                            </a>
+                        </li>
+                        <li class="flex items-center gap-2">
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
+                            <a href="tel:+(260) 744-1944" target="_blank">(260) 744-1944</a>
+                        </li>
+                        <li class="flex items-center gap-2">
+                            <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"></path></svg>
+                            <a href="mailto:copelandcontracting@comcast.net"
+                                target="_blank">copelandcontracting@comcast.net</a>
+                        </li>
+                    </ul>
+                    <ul class="p flex flex-col gap-6 justify-center items-center lg:justify-start lg:items-start">
+                        <li>Monday - Friday: 8:00am - 5:00pm</li>
+                        <li>Saturday: closed</li>
+                        <li>Sunday: closed</li>
+                    </ul>
+                </div>
+                <div
+                    class="bg- flex items-center justify-center mt-5 lg:mt-0 lg:justify-end px-[5%] lg:px-20 py-2 gap-3">
+                    <a href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" target="_blank" class="bg-black rounded-md ">
+                        <img src="./images/Facebook-transparent.png" width="40" alt="">
                     </a>
-                    <div class="grid grid-cols-1 sm:grid-cols-2 gap-8 items-center justify-center">
-                        <ul
-                            class="p flex flex-col justify-center items-center gap-6 sm:justify-start sm:items-start text-center">
-                            <li class="flex gap-2 items-start">
-                                <svg class="mt-1" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 384 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"></path></svg>
-                                <a href="https://maps.app.goo.gl/NGC6gzFgLkK41BhK7" class="text-start" target="_blank">
-                                    3105 Oxford Street, Fort Wayne, Indiana 46806
-                                </a>
-                            </li>
-                            <li class="flex items-center gap-2">
-                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
-                                <a href="tel:+(260) 744-1944" target="_blank">(260) 744-1944</a>
-                            </li>
-                            <li class="flex items-center gap-2">
-                                <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4-8 5-8-5V6l8 5 8-5v2z"></path></svg>
-                                <a href="mailto:copelandcontracting@comcast.net"
-                                    target="_blank">copelandcontracting@comcast.net</a>
-                            </li>
-                        </ul>
-                        <ul class="p flex flex-col gap-6 justify-center items-center lg:justify-start lg:items-start">
-                            <li>Monday - Friday: 8:00am - 5:00pm</li>
-                            <li>Saturday: closed</li>
-                            <li>Sunday: closed</li>
-                        </ul>
-                    </div>
-                    <div
-                        class="bg- flex items-center justify-center mt-5 lg:mt-0 lg:justify-end px-[5%] lg:px-20 py-2 gap-3">
-                        <a href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" target="_blank" class="bg-black rounded-md ">
-                            <img src="./images/Facebook-transparent.png" width="40" alt="">
-                        </a>
-                        <a target="_blank"
-                            href="https://www.google.com/maps/place/Copeland+Contracting,+Inc./@46.423669,-129.9427085,3z/data=!4m16!1m9!3m8!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!2sCopeland+Contracting,+Inc.!8m2!3d46.423669!4d-129.9427086!9m1!1b1!16s%2Fg%2F11hy9nqr2l!3m5!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!8m2!3d46.423669!4d-129.9427086!16s%2Fg%2F11hy9nqr2l?entry=ttu&g_ep=EgoyMDI0MDkyMi4wIKXMDSoASAFQAw%3D%3D"
-                            class="bg-black rounded-md flex items-center justify-center">
-                            <img src="./images/Google-transparent.png" width="40" alt="">
-                        </a>
+                    <a target="_blank"
+                        href="https://www.google.com/maps/place/Copeland+Contracting,+Inc./@46.423669,-129.9427085,3z/data=!4m16!1m9!3m8!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!2sCopeland+Contracting,+Inc.!8m2!3d46.423669!4d-129.9427086!9m1!1b1!16s%2Fg%2F11hy9nqr2l!3m5!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!8m2!3d46.423669!4d-129.9427086!16s%2Fg%2F11hy9nqr2l?entry=ttu&g_ep=EgoyMDI0MDkyMi4wIKXMDSoASAFQAw%3D%3D"
+                        class="bg-black rounded-md flex items-center justify-center">
+                        <img src="./images/Google-transparent.png" width="40" alt="">
+                    </a>
 
-                    </div>
-                </div>
-                <hr class="h-[1px] border-t-zinc-300 w-full" />
-                <div class="text-center flex flex-col gap-3">
-                    <p class="text-white hover:text-primary duration-200">License: PC#89000128</p>
-                    <p class="text-white hover:text-primary duration-200">We are Locally Owned and Operated.
-                    </p>
-                </div>
-                <div class="flex-col-reverse flex sm:flex-row justify-between w-full gap-5 pb-10">
-                    <p class="p text-center sm:text-start text-white ">© 2024 Copeland Contracting. All Rights Reserved
-                    </p>
-                    <div class="p flex justify-center gap-3 text-white">
-                        <a href="terms-of-service" onclick="scrollToTop()">Terms of Service</a>
-                        <a href="privacy-policy" onclick="scrollToTop()">Privacy Policy</a>
-                    </div>
                 </div>
             </div>
+            <hr class="h-[1px] border-t-zinc-300 w-full" />
+            <div class="text-center flex flex-col gap-3">
+                <p class="text-white hover:text-primary duration-200">License: PC#89000128</p>
+                <p class="text-white hover:text-primary duration-200">We are Locally Owned and Operated.
+                </p>
+            </div>
+            <div class="flex-col-reverse flex sm:flex-row justify-between w-full gap-5 pb-10">
+                <p class="p text-center sm:text-start text-white ">© 2024 Copeland Contracting. All Rights Reserved
+                </p>
+                <div class="p flex justify-center gap-3 text-white">
+                    <a href="terms-of-service" onclick="scrollToTop()">Terms of Service</a>
+                    <a href="privacy-policy" onclick="scrollToTop()">Privacy Policy</a>
+                </div>
+            </div>
+        </div>
 
-        </footer>
-    </main>
+    </footer>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./script.js"></script>
 </body>
