--- a/index.html
+++ b/index.html
@@ -1131,12 +1131,50 @@
                             </div>
                         </div>
 
-                        <!-- Message Area -->
+                        <!-- Message -->
                         <div class="mt-5">
                             <label for="Message">Message <span class="text-red-600">*</span></label>
                             <textarea class="w-full" name="Message" rows="10" placeholder="Type your message..."
                                 required></textarea>
                         </div>
+                        <div class="mt-5">
+                            <label for="communication">
+                              Preferred Method of Communication: <span style="color: red;">*</span>
+                            </label>
+                            <div class="flex gap-3 items-center">
+                              <input
+                                required
+                                type="radio"
+                                id="communicationPhone"
+                                name="communication"
+                                value="Call"
+                              />
+                              <label for="communicationPhone">Call</label>
+                            </div>
+                            <div class="flex gap-3 items-center">
+                              <input type="radio" id="communicationText" name="communication" value="Text" />
+                              <label for="communicationText">Text</label>
+                            </div>
+                            <div class="flex gap-3 items-center">
+                              <input type="radio" id="communicationEmail" name="communication" value="Email" />
+                              <label for="communicationEmail">Email</label>
+                            </div>
+                          </div>
+                          
+                          <div class="flex gap-3 mt-5 w-full md:w-3/4">
+                            <input type="checkbox" name="sms messaging" />
+                            <label for="sms message">
+                              By checking this box, I consent to receive SMS messages. I understand that Message and data rates may apply and that I may reply STOP to opt-out of future messaging.
+                            </label>
+                          </div>
+                          
+                          <div class="flex gap-3 mt-5">
+                            <input type="checkbox" required />
+                            <label for="agreement">
+                              I accept Copeland Contracting's 
+                              <a href="./terms.html" class="underline">Terms of Service.</a>
+                            </label>
+                          </div>
 
                         <!-- Submit Button -->
                         <div class="w-full text-center mt-10 pb-10">
