--- a/drainage.html
+++ b/drainage.html
@@ -114,7 +114,7 @@
 
         <section class="px-[5%] py-10">
             <div class=" border-[1px] border-zinc-800 p-4 lg:p-10">
-                <h3 class="heading text-4xl text-primary uppercase text-center">Common plumbing problems include:
+                <h3 class="heading text-4xl text-primary uppercase text-center">Common Drainage problems include:
                 </h3>
                 <div class="drainage-container">
                     <div class="drainage-card">
@@ -143,6 +143,9 @@
                     </div>
                     <div class="drainage-card">
                         <p>Drainage line repair / installation</p>
+                    </div>
+                    <div class="drainage-card">
+                        <p>Sewer Camera Inspection</p>
                     </div>
                    
                 </div>
@@ -259,7 +262,7 @@
                                     </option>
                                     <option value="Gas Line Services">Gas Line Services</option>
                                     <option value="Drain Cleaning">Drain Cleaning</option>
-                                    <option value="Sewer Camera Video Inspections">Sewer Camera Video Inspections
+                                    <option value="Sewer Camera Video Inspections">Sewer Camera Inspection
                                     </option>
                                     <option value="Sewer Line Replacements">Sewer Line Replacements
                                     </option>
