--- a/plumbing.html
+++ b/plumbing.html
@@ -84,71 +84,127 @@
     </header>
 
     <main>
-        <section class="px-[5%] py-10">
+        <section class="px-[5%] py-5 lg:py-20">
             <div class="flex gap-10 flex-col lg:flex-row">
                 <div class="lg:w-1/2 flex flex-col gap-5 items-start">
                     <h3 class="heading uppercase text-primary text-4xl">
-                        Emergency drainage and sewer maintenance
+                        Plumbing
                     </h3>
-                    <p class="leading-[1.6rem] ">
-                        Sometimes accidents just happen or over time your pipes just get clogged with so much filth that
-                        your sewage does not drain away. When these things happen, flooding occurs and the filthiest
-                        smell can make your stomach hurl. At Copeland Contracting, we clear these clogs and make
-                        your pipes and toilets as good as new! From clogged sinks, to clogged toilets, or clogged main
-                        drainage lines, we’ve got you covered. Just like our plumbing, our technicians are
-                        able to diagnose these problems and get right to it to clear out those nasty clogs. Even the
-                        dirtiest job can be made to look like the cleanest job with Copeland Contracting. We
-                        cover your floor and furniture so that you are worry free and odor free. If you are experiencing
-                        any of the following problems, please give us a call or schedule appointment online and we’ll
-                        get it fixed in no time!
+                    <p class="leading-[2rem] ">
+                        Regular plumbing maintenance is key to avoiding costly repairs. From detecting hidden leaks to cleaning drains, maintaining your plumbing helps avoid unexpected breakdowns. In Fort Wayne and Fort Wayne, where older homes are common, routine maintenance and timely repairs can extend the life of your plumbing system. Our professional plumbers at Copeland Contracting address everything from clogs to water pressure issues, keeping your home's plumbing running smoothly.
                     </p>
                     <a href="#contact" class="book-online">
                         GET A QUOTE
                     </a>
                 </div>
                 <div class="lg:w-1/2 h-[400px] overflow-hidden">
-                    <img src="./images/drainage-IMG_5285.jpg" class="w-full h-full object-cover" alt="">
+                    <img src="./images/why-choose-img.jpeg" class="w-full h-full object-cover" alt="">
                 </div>
             </div>
         </section>
 
-        <section class="px-[5%] py-10">
-            <div class=" border-[1px] border-zinc-800 p-4 lg:p-10">
-                <h3 class="heading text-4xl text-primary uppercase text-center">Common plumbing problems include:
-                </h3>
-                <div class="drainage-container">
-                    <div class="drainage-card">
-                        <p>Clogged sink</p>
+        <section class="lg:pr-[5%] mt-20  py-10 service-areas flex flex-col lg:flex-row items-start gap-10">
+            <div class="overflow-hidden w-full lg:w-1/2">
+                <img src="./images/why-choose-img.jpeg" alt="">
+            </div>
+            <div class="px-[5%] lg:px-0 mt-10 lg:mt-0 lg:w-1/2">
+                <h3 class="heading text-4xl uppercase text-primary ">Common Plumbing Issues We Can Help With</h3>
+                <p class="mt-5">Are you seeing drips? Are your pipes making strange gurgling sounds? Even these small indicators could mean there is a potential issue within your plumbing system. It's essential to keep these minor issues from getting worse, by calling in our experienced plumbers to support you with plumbing repairs. Here are some common plumbing problems to look out for:
+                </p>
+                <ul class="plumbing-list">
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Clogged toilet</p>
+                    <p>Slow drains</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Clogged bathtub</p>
+                    <p>
+                        Dripping showerheads</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Clogged shower</p>
+                    <p>Leaky faucets or plumbing fixtures</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Clogged main sewer line</p>
+                    <p>
+                        Sewer backups</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Clogged sump pumps</p>
+                    <p>Clogged drains</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Foul odor or smell coming from drains</p>
+                    <p>Sink flies</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Drainage maintenance and preventative measures</p>
+                    <p>Running toilets</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                    <div class="drainage-card">
-                        <p>Drainage line repair / installation</p>
+                    <p>
+                        High water bills</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
                     </div>
-                   
-                </div>
+                    <p>Unpleasant drainage odors</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
+                    </div>
+                    <p>Dirty water coming out of faucets</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
+                    </div>
+                    <p>Leaky pipes</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
+                    </div>
+                    <p>Noises coming from pipes and drains</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
+                    </div>
+                    <p>Low water pressure</p>
+                </li>
+                    <li>
+                    <div class="bg-primary flex items-center justify-center rounded-full p-[5px] w-[30px] h-[30px]">
+                        <svg data-name="Layer 1" class="invert" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16"><path d="m2.67 7.63 2.79 2.78 7.87-7.87 1.52 1.52-9.39 9.4-4.31-4.31 1.52-1.52z"/></svg>
+                    </div>
+                    <p>Frozen pipes</p>
+                </li>
+                    
+                </ul>
             </div>
         </section>
 
+        <!-- Contact us -->
         <section class="px-[5%] pb-10 lg:px-[25%] mt-10 lg:mt-40">
             <div class="flex flex-col gap-5 items-center text-center">
                 <h3 class="heading text-4xl uppercase">
