--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     <main>
 
+        <!-- hero section -->
         <section class="hero h-[80vh]">
             <div class="hero-overlay"></div>
             <div class="hero-content relative z-10 h-full flex flex-col justify-center items-start pl-[5%]">
@@ -96,6 +97,7 @@
             </div>
         </section>
 
+        <!-- 3 features -->
         <section class="bg-black flex flex-col md:flex-row items-center justify-center lg:gap-48 py-10">
             <div class="flex gap-5 items-center">
                 <img src="./images/excellent-service-icon.svg" alt="">
@@ -112,6 +114,8 @@
                 </h2>
             </div>
         </section>
+
+        <!-- fort wayne plumbers near you -->
         <section>
             <div class="flex flex-col py-20 px-[5%]  lg:px-[20%] gap-5 items-center justify-center">
                 <h2 class="heading uppercase text-4xl text-primary">FORT WAYNE PLUMBERS NEAR YOU</h2>
@@ -136,6 +140,8 @@
             </div>
         </section>
 
+
+        <!-- plumbing and drainage -->
         <section class="bg-[#F5F5F5] py-20 px-[5%] mt-10">
             <h2 class="heading text-5xl text-primary">
                 Plumbing in Fort Wayne
@@ -158,7 +164,7 @@
                             replaced, our experienced team can handle it. As your trusted plumbing contractor in Fort
                             Wayne, we ensure every job is completed to the highest standards.
                         </p>
-                        <a class="card-btn mt-[40px]">
+                        <a href="./plumbing.html" class="card-btn mt-[40px]">
                             LEARN MORE
                         </a>
                     </div>
@@ -191,6 +197,7 @@
 
         </section>
 
+        <!-- reviews -->
         <section class="reviews py-10 lg:py-20">
             <div class="left ">
                 <div>
@@ -727,6 +734,7 @@
             </div>
         </section>
 
+        <!-- 4 services -->
         <section class="bg-[#f5f5f5] py-10 lg:py-20">
             <div class="grid rid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 px-[5%] py-10">
                 <div class="card2 bg-white shadow-lg p-4">
@@ -784,6 +792,7 @@
             </div>
         </section>
 
+        <!-- service areas -->
         <section class="lg:pr-[5%]  py-10 service-areas flex flex-col lg:flex-row items-start gap-10">
             <div class="overflow-hidden w-full lg:w-[1200px]">
                 <iframe src="https://www.google.com/maps/d/u/0/embed?mid=10TPNh8rEjj7U-ufTljkokci_3mQ2rs8&ehbc=2E312F&noprof=1" class="w-full md:w-[800px] lg:w-[600px]" height="480"></iframe>
@@ -861,6 +870,7 @@
             </div>
         </section>
 
+        <!-- why choose us -->
         <section class="flex flex-col lg:flex-row  py-10">
             <div class="lg:w-1/2 px-[5%] md:px-[4rem] flex flex-col gap-4 justify-center">
                 <h3 class="heading text-5xl opacity-80">
@@ -881,6 +891,7 @@
             </div>
         </section>
 
+        <!-- common plumbing problems -->
         <section class="py-20 px-[5%] lg:px-[20%] text-center">
             <div>
                 <h3 class="heading text-5xl text-primary">Common Plumbing Problems</h3>
@@ -904,6 +915,7 @@
             </div>
         </section>
 
+        <!-- Contact us -->
         <section class="px-[5%] pb-10 lg:px-[25%] ">
             <div class="flex flex-col gap-5 items-center text-center">
                 <h3 class="heading text-4xl uppercase">
@@ -1014,7 +1026,7 @@
                                     </option>
                                     <option value="Gas Line Services">Gas Line Services</option>
                                     <option value="Drain Cleaning">Drain Cleaning</option>
-                                    <option value="Sewer Camera Video Inspections">Sewer Camera Video Inspections
+                                    <option value="Sewer Camera Video Inspections">Sewer Camera Inspection
                                     </option>
                                     <option value="Sewer Line Replacements">Sewer Line Replacements
                                     </option>
