--- a/drainage.html
+++ b/drainage.html
@@ -163,6 +163,8 @@
                         plumbing needs.</span>
                 </p>
             </div>
+
+            
             <section id="contact" class="bg-white flex flex-col justify-center border-[1px] mt-16 border-primary">
                 <div class="p-10 flex flex-col gap-5 justify-center">
                     <h2 class=" heading text-center text-primary pb-5 text-6xl">Service Request Form</h2>
@@ -517,6 +519,8 @@
         </div>
 
     </footer>
+    <script src="./script.js"></script>
+
 </body>
 
 </html>
