call button adde

--- a/plumbing.html
+++ b/plumbing.html
@@ -102,14 +102,14 @@
                     </a>
                 </div>
                 <div class="lg:w-1/2 h-[400px] overflow-hidden">
-                    <img src="./images/why-choose-img.jpeg" class="w-full h-full object-cover" alt="">
+                    <img src="./images/drainage-1.jpeg" class="w-full h-full object-cover" alt="">
                 </div>
             </div>
         </section>
 
         <section class="lg:px-[5%] mt-20  py-10 service-areas flex flex-col lg:flex-row items-center gap-10">
             <div class="overflow-hidden w-full lg:w-1/2">
-                <img src="./images/why-choose-img.jpeg" alt="">
+                <img src="./images/plumbing-1.jpeg" alt="">
             </div>
             <div class="px-[5%] lg:px-0 mt-10 lg:mt-0 lg:w-1/2">
                 <h3 class="heading text-4xl uppercase text-primary ">Common Plumbing Issues We Can Help With</h3>
