--- a/drainage.html
+++ b/drainage.html
@@ -299,6 +299,9 @@
                                 <select name="Preferred day of 1st service" id="Preferreddayofservice" required>
                                     <option value="Monday">Monday</option>
                                     <option value="Tuesday">Tuesday</option>
+                                    <option value="Wednesday">Wednesday</option>
+                                    <option value="Thursday">Thursday</option>
+                                    <option value="Friday">Friday</option>
                                     <!-- Add other options -->
                                 </select>
                             </div>
