social  icons removed

--- a/plumbing.html
+++ b/plumbing.html
@@ -31,8 +31,9 @@
 </head>
 
 <body>
+    
     <header class="">
-        <div class="bg-primary flex items-center justify-end px-[5%] lg:px-20 py-2 gap-3">
+        <!-- <div class="bg-primary flex items-center justify-end px-[5%] lg:px-20 py-2 gap-3">
             <a target="_blank" href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" class="bg-black rounded-md ">
                 <img src="./images/Facebook-transparent.png" width="40" alt="">
             </a>
@@ -41,7 +42,7 @@
                 <img src="./images/Google-transparent.png" width="40" alt="">
             </a>
            
-        </div>
+        </div> -->
         <div class="bg-black lg:py-6 flex items-center justify-between lg:px-[5%]">
             <div class="hidden lg:block">
                 <img src="./images/logo.png" width="100" alt="">
