--- a/plumbing.html
+++ b/plumbing.html
@@ -31,9 +31,9 @@
 </head>
 
 <body>
-    
+
     <header class="">
-        <!-- <div class="bg-primary flex items-center justify-end px-[5%] lg:px-20 py-2 gap-3">
+        <div class="bg-primary flex items-center justify-end px-[5%] lg:px-20 py-2 gap-3">
             <a target="_blank" href="https://www.facebook.com/profile.php?id=61566286147745&mibextid=LQQJ4d" class="bg-black rounded-md ">
                 <img src="./images/Facebook-transparent.png" width="40" alt="">
             </a>
@@ -42,7 +42,7 @@
                 <img src="./images/Google-transparent.png" width="40" alt="">
             </a>
            
-        </div> -->
+        </div>
         <div class="bg-black lg:py-6 flex items-center justify-between lg:px-[5%]">
             <div class="hidden lg:block">
                 <img src="./images/logo.png" width="100" alt="">
@@ -65,9 +65,9 @@
                 <a href="#contact" class="book-online hover:text-white">BOOK ONLINE</a>
             </nav>
 
-            <div class="bg-primary p-6 lg:hidden">
+            <div class="px-6 py-10 lg:hidden">
                 <a href="tel:+(260) 744-1944">
-                    <svg class="text-white scale-[1.5] " stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
+                    <svg class="text-primary scale-[1.5] " stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
                     </a>
             </div>
 
