--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./meet.html">Meet The Team </a>
                 <a class="hover:scale-[1.05] duration-200 ease text-base" href="./about.html">About Us</a>
                 <a class="hover:scale-[1.05] duration-200 ease text-base mr-5" href="./gallery.html">Gallery</a>
-                <a href="tel:+260-744-1944" class="card-btn gap-2 flex items-center">
+                <a href="tel:+1260-744-1944" class="card-btn gap-2 flex items-center">
                     <div class="w-[25px]">
                         <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
                             style="enable-background:new 0 0 28.314 28.323" xml:space="preserve">
@@ -109,31 +109,18 @@
                 </p>
             </div>
             <div class="flex flex-col lg:flex-row items-center gap-10 py-10">
-                <div class="lg:w-1/2">
-                    <img src="./images/black-owned.png" class="h-[300px]" alt="">
+                <div class="lg:w-1/2 lg:px-[6%]">
+                    <img src="./images/BB236F46-66CD-405D-9DD1-353FF1B82E34.png" class="h-[300px] w-full" alt="">
                 </div>
                 <div class="lg:w-1/2">
                     <h4 class="heading text-primary text-3xl uppercase">A plumbing and heating company</h4>
-                    <p class="leading-[2rem]">Plumbing as a profession is almost bad economy proof. “We always hit all
-                        areas of the economy,” he said. Plumbing is one of those jobs that can act as a barometer for
-                        the economy; you examine the job and you can forecast which way the wind is blowing, according
-                        to Greg. “If the economy is booming, we’re going to do more houses. If it slows down, we do more
-                        repair and remodeling.”</p>
+                    <p class="leading-[2rem]">Copeland Contracting has worked on a lot of new housing built in the inner city recently. Their deep resume includes the pool at Freimann Square, the Lafayette Medical Center begun by Dr. Alfred Stovall…that impressive building was one of his first jobs. </p>
                     <br>
-                    <p class="leading-[2rem]">Copeland Contracting has three workers, including Greg; they try not to
-                        work on the weekends but that does happen. They’ve worked on a lot of new housing built in the
-                        inner city recently. Their deep resume includes the pool at Freimann Square, the Lafayette
-                        Medical Center begun by Dr. Alfred Stovall…that impressive building was one of his first jobs.
+                    <p class="leading-[2rem]">We do all facets of plumbing. “We snake out drains…repair and install boilers, new construction, repair and remodeling.”  Copeland has worked those travel, name-drop jobs too, including clients in Hawaii, New York, the Ozark’s in Arkansas, and the Army Corps of Engineering in Pittsburgh. But they will still come out to your house for usual plumbing. Regular folks are our folks.  
                     </p>
                     <div class="flex items-center justify-start mt-3">
                     <a href="#contact" class="card-btn gap-2 flex items-center">
-                        <div class="w-[25px]">
-                            <svg xmlns="http://www.w3.org/2000/svg" class="phone" viewBox="0 0 28.314 28.323"
-                                style="enable-background:new 0 0 28.314 28.323" xml:space="preserve">
-                                <path
-                                    d="m27.728 20.384-4.242-4.242a1.982 1.982 0 0 0-1.413-.586h-.002c-.534 0-1.036.209-1.413.586L17.83 18.97l-8.485-8.485 2.828-2.828c.78-.78.78-2.05-.001-2.83L7.929.585A1.986 1.986 0 0 0 6.516 0h-.001C5.98 0 5.478.209 5.101.587L.858 4.83C.729 4.958-.389 6.168.142 8.827c.626 3.129 3.246 7.019 7.787 11.56 6.499 6.499 10.598 7.937 12.953 7.937 1.63 0 2.426-.689 2.604-.867l4.242-4.242c.378-.378.587-.881.586-1.416 0-.534-.208-1.037-.586-1.415zm-5.656 5.658c-.028.028-3.409 2.249-12.729-7.07C-.178 9.452 2.276 6.243 2.272 6.244L6.515 2l4.243 4.244-3.535 3.535a.999.999 0 0 0 0 1.414l9.899 9.899a.999.999 0 0 0 1.414 0l3.535-3.536 4.243 4.244-4.242 4.242z" />
-                            </svg>
-                        </div>
+                        
                         Request an Appointment
                     </a>
                 </div>
