--- a/meet.html
+++ b/meet.html
@@ -104,8 +104,8 @@
     <main>
 
         <section class="meet-banner h-[200px] md:h-[400px] relative">
-            <div class="h-full top-0 w-full absolute bg-zinc-800 opacity-40">
-            </div>
+            <!-- <div class="h-full top-0 w-full absolute bg-zinc-800 opacity-40">
+            </div> -->
         </section>
 
         <section class="px-[5%] py-10 flex">
