--- a/meet.html
+++ b/meet.html
@@ -125,7 +125,7 @@
                             Contractor license in 1987.
                         </p>
                     </div>
-                    <div class="grid grid-cols-2 justify-center lg:grid-cols-1 mt-5">
+                    <div class="grid grid-cols-2 place-items-center lg:grid-cols-1 mt-5">
                         <img src="./images/gregory.webp" class="w-[200px] h-[200px] lg:w-[400px] lg:h-[400px]" alt="">
                         <img src="./images/cynthia copeland.jpeg" class="w-[200px] h-[200px] lg:hidden" alt="">
                     </div>
