--- a/about.html
+++ b/about.html
@@ -152,11 +152,11 @@
                         At <span class="font-semibold text-primary">Copeland Contracting</span>, we believe that our customers always come first. Our greatest
                         strength is that we listen and we create solutions to all your problems. Not only do we create
                         solutions, we love educating our customers, so if you ever have any questions on what we’re
-                        doing or you’re curious about anything to do with plumbing, drainage, heating and gas, please do
+                        doing or you’re curious about anything to do with plumbing, drainage, please do
                         not hesitate to ask our friendly technicians – you can even give us a call! Every customer is
                         special to us and that is why we strive to give the best service out there and go the extra
                         mile. When you call us, you can rest assure that you will be in good hands. From plumbing, to
-                        drainage, to heating, to gas, we’ll make it happen!
+                        drainage, we’ll make it happen!
                     </p>
                     <a target="_blank" href="https://www.google.com/maps/place/Copeland+Contracting,+Inc./@46.423669,-129.9427085,3z/data=!4m16!1m9!3m8!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!2sCopeland+Contracting,+Inc.!8m2!3d46.423669!4d-129.9427086!9m1!1b1!16s%2Fg%2F11hy9nqr2l!3m5!1s0x8815fad7bce2b1d5:0xe3981c6aef853ee4!8m2!3d46.423669!4d-129.9427086!16s%2Fg%2F11hy9nqr2l?entry=ttu&g_ep=EgoyMDI0MDkyMi4wIKXMDSoASAFQAw%3D%3D" class="book-online gap-2 flex items-center">
                         Read Our Reviews
@@ -172,7 +172,7 @@
                     <h3 class="about-heading heading">Excellent Service
                     </h3>
                     <p class="about-para">
-                        As there are only 24 hours a day, having to deal with a plumbing/heating problem is already troublesome enough but sometimes you might have to take time off your work or you might even have plans to tend to on your hectic schedule. At Impetus Plumbing and Heating, we value and respect your time. In doing so, we make sure that we are always on time. We offer a 1 hour time frame to show up at your door. Before we show up at any job, we will confirm with our customers – via phone call – that we are on our way and the approximate time we will show up within that hour. If we do not give a confirmation or we are late within the 1 hour time frame *without giving notification*, we will take 15% off your bill for your time. This is to ensure and show to our customers that we deeply value and respect their time.
+                        As there are only 24 hours a day, having to deal with a plumbing/heating problem is already troublesome enough but sometimes you might have to take time off your work or you might even have plans to tend to on your hectic schedule. At Copeland Contracting, we value and respect your time. In doing so, we make sure that we are always on time. Before we show up at any job, we will confirm with our customers – via phone call – that we are on our way and the approximate time we will show up within that hour. This is to ensure and show to our customers that we deeply value and respect their time.
                     </p>
                 </div>
             </div>
